--- a/daili.yaml
+++ b/daili.yaml
@@ -35,18 +35,18 @@ dns:
 proxies:
 - name: 101.132.192.212:30003@ss
   server: 101.132.192.212
-  port: 30003
   type: ss
-  country: "\U0001F1E8\U0001F1F3 CN"
+  country: "\U0001F1E8\U0001F1F3CN"
+  port: 30003
   password: desperadoj.com_free_proxy_d39m
   cipher: aes-128-gcm
   success_rate: 100.0
-  minimum: 6.3
-  maximum: 6.89
-  average: 6.65
-  UpdateDay: '2022-05-02T12:32:06.913580'
+  minimum: 6.18
+  maximum: 8.27
+  average: 7.04
+  UpdateDay: '2022-05-02T15:31:27.413129'
   PFirstFoundDay: '2022-03-13T18:26:52.937942'
-  Rank: 28325
+  Rank: 28326
 - name: music.desperadoj.com:30003@ss
   server: music.desperadoj.com
   type: ss
@@ -55,41 +55,41 @@ proxies:
   password: desperadoj.com_free_proxy_d39m
   cipher: aes-128-gcm
   success_rate: 100.0
-  minimum: 7.17
-  maximum: 13.93
-  average: 9.67
-  UpdateDay: '2022-05-02T12:30:32.887967'
+  minimum: 6.27
+  maximum: 16.63
+  average: 10.4
+  UpdateDay: '2022-05-02T15:31:27.430210'
   PFirstFoundDay: '2022-03-14T10:17:16.436055'
-  Rank: 24773
+  Rank: 24774
 - name: 101.91.121.247:50004@ss
   server: 101.91.121.247
-  type: ss
-  country: "\U0001F1E8\U0001F1F3CN"
   port: 50004
+  type: ss
+  country: "\U0001F1E8\U0001F1F3 CN"
   password: '4415934295'
   cipher: aes-256-cfb
   success_rate: 100.0
-  minimum: 9.54
-  maximum: 10.32
-  average: 9.91
-  UpdateDay: '2022-05-02T12:30:32.918042'
+  minimum: 10.6
+  maximum: 11.7
+  average: 11.1
+  UpdateDay: '2022-05-02T15:33:01.092616'
   PFirstFoundDay: '2022-03-11T23:29:04.876882'
-  Rank: 22170
+  Rank: 22172
 - name: 106.180.225.69:1443@trojan
   server: 106.180.225.69
-  port: 1443
   type: trojan
-  country: "\U0001F1EF\U0001F1F5 JP"
+  country: "\U0001F1EF\U0001F1F5JP"
+  port: 1443
   password: 7x42LetRa0
   skip-cert-verify: true
   udp: true
   success_rate: 100.0
-  minimum: 65.06
-  maximum: 100.07
-  average: 76.93
-  UpdateDay: '2022-05-02T12:32:07.160915'
+  minimum: 58.48
+  maximum: 69.32
+  average: 64.98
+  UpdateDay: '2022-05-02T15:31:45.550906'
   PFirstFoundDay: '2022-03-11T23:05:01.549769'
-  Rank: 18813
+  Rank: 18814
 - name: fkgfw-prod.i.sxl.cn:443@ss
   server: fkgfw-prod.i.sxl.cn
   port: 443
@@ -102,22 +102,22 @@ proxies:
   average: 89.1
   UpdateDay: '2022-03-24T18:35:12.668742'
   PFirstFoundDay: '2022-03-19T12:33:06.851449'
-  Rank: 15531
+  Rank: 15585
 - name: 2.58.242.43:443@trojan
   server: 2.58.242.43
   port: 443
   type: trojan
   country: "\U0001F1F9\U0001F1FC TW"
-  password: YWVzLTI1Ni1nY206eHBRd3lWNFc1RmRBNk5NQU5KSng3M1VT
+  password: 7a9a3bb7-43b4YWVzLTI1Ni1nY206eHBRd3lWNFc1RmRBNk5NQU5KSng3M1VT
   skip-cert-verify: true
   udp: true
   success_rate: 100.0
-  minimum: 102.45
-  maximum: 1120.31
-  average: 442.69
-  UpdateDay: '2022-05-02T12:32:08.783537'
+  minimum: 74.22
+  maximum: 87.01
+  average: 80.71
+  UpdateDay: '2022-05-02T15:33:01.637101'
   PFirstFoundDay: '2022-03-14T21:36:22.498526'
-  Rank: 14347
+  Rank: 14351
 - name: 210.152.13.168:443@trojan
   server: 210.152.13.168
   type: trojan
@@ -127,12 +127,12 @@ proxies:
   skip-cert-verify: true
   udp: true
   success_rate: 100.0
-  minimum: 72.4
-  maximum: 78.08
-  average: 75.17
-  UpdateDay: '2022-05-02T12:30:51.042431'
+  minimum: 61.9
+  maximum: 69.44
+  average: 66.36
+  UpdateDay: '2022-05-02T15:31:45.554378'
   PFirstFoundDay: '2022-03-21T15:31:51.301146'
-  Rank: 13891
+  Rank: 13892
 - name: hk-hkg-sh-hk-02-tr.cdn.savoy.click:21089@trojan
   server: hk-hkg-sh-hk-02-tr.cdn.savoy.click
   port: 21089
@@ -142,12 +142,12 @@ proxies:
   skip-cert-verify: true
   udp: true
   success_rate: 100.0
-  minimum: 38.96
-  maximum: 48.65
-  average: 42.95
-  UpdateDay: '2022-05-02T12:32:07.044503'
+  minimum: 36.69
+  maximum: 48.32
+  average: 41.1
+  UpdateDay: '2022-05-02T15:33:01.238179'
   PFirstFoundDay: '2022-03-13T18:25:41.957547'
-  Rank: 13690
+  Rank: 13792
 - name: hk-hkg-shhk-001-tr.cdn.savoy.click:20089@trojan
   server: hk-hkg-shhk-001-tr.cdn.savoy.click
   port: 20089
@@ -157,12 +157,12 @@ proxies:
   skip-cert-verify: true
   udp: true
   success_rate: 100.0
-  minimum: 36.81
-  maximum: 46.49
-  average: 41.07
-  UpdateDay: '2022-05-02T12:32:07.032291'
+  minimum: 41.92
+  maximum: 47.77
+  average: 44.61
+  UpdateDay: '2022-05-02T15:33:01.247151'
   PFirstFoundDay: '2022-03-13T18:26:01.142104'
-  Rank: 11742
+  Rank: 11844
 - alterId: 0
   cipher: auto
   http-opts:
@@ -193,16 +193,16 @@ proxies:
   type: trojan
   country: "\U0001F1E8\U0001F1F3CN"
   port: 889
-  password: SfobRIcergHchqBFzzua
+  password: UiLPqefVfielqkDjEwBV
   skip-cert-verify: true
   udp: true
   success_rate: 100.0
-  minimum: 39.16
-  maximum: 44.97
-  average: 42.3
-  UpdateDay: '2022-05-02T12:30:32.974029'
+  minimum: 36.68
+  maximum: 44.39
+  average: 40.69
+  UpdateDay: '2022-05-02T15:31:27.528217'
   PFirstFoundDay: '2022-03-20T12:36:16.101193'
-  Rank: 8197
+  Rank: 8198
 - name: cscu.wecanfly.top:51132@trojan
   server: cscu.wecanfly.top
   port: 51132
@@ -220,34 +220,34 @@ proxies:
   Rank: 7592
 - name: 184.168.127.50:443@trojan
   server: 184.168.127.50
-  type: trojan
-  country: "\U0001F1FA\U0001F1F8US"
   port: 443
-  password: 28d98f761aca9d636f44db62544628eb
+  type: trojan
+  country: "\U0001F1FA\U0001F1F8 US"
+  password: a3fa58b581353bb375d2ddad0f327938
   skip-cert-verify: true
   udp: true
   success_rate: 100.0
-  minimum: 246.71
-  maximum: 251.76
-  average: 249.45
-  UpdateDay: '2022-05-02T12:31:31.477017'
+  minimum: 249.39
+  maximum: 252.83
+  average: 251.63
+  UpdateDay: '2022-05-02T15:33:02.210792'
   PFirstFoundDay: '2022-03-16T00:32:54.032660'
-  Rank: 5657
+  Rank: 5660
 - name: 72.167.45.6:443@trojan
   server: 72.167.45.6
-  type: trojan
-  country: "\U0001F1FA\U0001F1F8US"
   port: 443
-  password: 28d98f761aca9d636f44db62544628eb
+  type: trojan
+  country: "\U0001F1FA\U0001F1F8 US"
+  password: 36ebef7d1b1d6205fd0c55f28800e674
   skip-cert-verify: true
   udp: true
   success_rate: 100.0
-  minimum: 171.01
-  maximum: 172.05
-  average: 171.39
-  UpdateDay: '2022-05-02T12:31:31.219988'
+  minimum: 171.91
+  maximum: 179.27
+  average: 174.37
+  UpdateDay: '2022-05-02T15:33:01.986753'
   PFirstFoundDay: '2022-03-31T09:34:10.783687'
-  Rank: 5537
+  Rank: 5540
 - name: tky3.ssgnode.ga:443@trojan
   server: tky3.ssgnode.ga
   port: 443
@@ -257,12 +257,12 @@ proxies:
   skip-cert-verify: true
   udp: true
   success_rate: 100.0
-  minimum: 41.13
-  maximum: 51.74
-  average: 45.7
-  UpdateDay: '2022-05-02T12:32:07.777231'
+  minimum: 41.99
+  maximum: 51.83
+  average: 47.72
+  UpdateDay: '2022-05-02T15:33:01.578279'
   PFirstFoundDay: '2022-03-31T03:35:27.638826'
-  Rank: 4952
+  Rank: 4955
 - name: 45.9.10.103:443@trojan
   server: 45.9.10.103
   type: trojan
@@ -277,22 +277,22 @@ proxies:
   average: 162.13
   UpdateDay: '2022-03-30T11:21:53.634848'
   PFirstFoundDay: '2022-03-23T09:35:36.105483'
-  Rank: 4905
+  Rank: 4955
 - name: www.tokyo2023.ga:443@trojan
   server: www.tokyo2023.ga
-  port: 443
   type: trojan
-  country: "\U0001F1FA\U0001F1F8 US"
+  country: "\U0001F1FA\U0001F1F8US"
+  port: 443
   password: 4f7dc540-d244-4e64-af21-4b5bb300add3
   skip-cert-verify: true
   udp: true
   success_rate: 100.0
-  minimum: 36.79
-  maximum: 54.02
-  average: 45.88
-  UpdateDay: '2022-05-02T12:32:08.073772'
+  minimum: 37.62
+  maximum: 51.25
+  average: 45.63
+  UpdateDay: '2022-05-02T15:32:25.478557'
   PFirstFoundDay: '2022-03-14T10:29:40.191643'
-  Rank: 4818
+  Rank: 4819
 - name: www.zx07.top:443@trojan
   server: www.zx07.top
   type: trojan
@@ -302,12 +302,12 @@ proxies:
   skip-cert-verify: true
   udp: true
   success_rate: 100.0
-  minimum: 43.18
-  maximum: 50.13
-  average: 46.25
-  UpdateDay: '2022-05-02T12:30:36.134614'
+  minimum: 39.12
+  maximum: 48.83
+  average: 42.6
+  UpdateDay: '2022-05-02T15:31:30.644368'
   PFirstFoundDay: '2022-03-13T18:24:17.598383'
-  Rank: 4567
+  Rank: 4633
 - name: www.gomacau.gq:443@trojan
   server: www.gomacau.gq
   type: trojan
